Kata 8
Ejercicio 8 resuelto.
se utiliza la dependencia protonpack ofrecida por el ejercicio para combinar desde el metodo StreamUtils.zip el id de la pelicula con su id de portada. luego se guardan en una lista.