@@ -10,6 +10,7 @@ import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Combine videos and bookmarks by index (StreamUtils.zip) (https://github.com/poetix/protonpack)
@@ -20,9 +21,10 @@ public class Kata8 {
     public static List<Map> execute() {
         List<Movie> movies = DataUtil.getMovies();
         List<Bookmark> bookMarks = DataUtil.getBookMarks();
-
-        // StreamUtils.zip()
-
-        return ImmutableList.of(ImmutableMap.of("videoId", 5, "bookmarkId", 3));
+        List<Map> zipped = StreamUtils.zip(
+                movies.stream(),bookMarks.stream(),(a,b)->
+                        Map.of(" movieId: ", a.getId(),"bookMarkId: ", b.getId())).collect(Collectors.toList());
+        System.out.println(zipped);
+        return zipped;
     }
 }
